adding tv and shit